<resources>
    <string name="app_name">DingKun Monitoring</string>
    <string name="no_internet">Load exception, check network or try again later</string>
    <string name="generic_server_down">The Internet is not great</string>
    <string name="generic_error">The Internet is not great</string>
    <string name="device_number">Device Number</string>
    <string name="user_name">User Name</string>
    <string name="user_hint">Please enter a user name</string>
    <string name="pwd">Password</string>
    <string name="pwd_hint">Please enter password</string>
    <string name="login">Log in</string>
    <string name="login_device">Log on to This Device</string>
    <string name="sync_data">Data Synchronization</string>
    <string name="login_title">User Login</string>
    <string name="toast_login_device">Tip: please register the machine first</string>
    <string name="tishi">Tip</string>
    <string name="please_device">Please register this machine first</string>
    <string name="please_user">Please enter a user name</string>
    <string name="please_pwd">Please enter password</string>
    <string name="please_sync">Please synchronize the data first</string>
    <string name="login_success">Login successfully</string>
    <string name="login_failed">Login failed. Please check your account or password</string>
    <string name="loging">Logging in, please wait</string>
    <string name="login_failed2">Login failed. Please try again later</string>
    <string name="syncing">Synchronizing data, please wait</string>
    <string name="sync_success">Data synchronization successful</string>
    <string name="sync_failed">Data synchronization failure</string>
    <string name="back_toast">Press exit again</string>
    <string name="register_user">Register Account</string>
    <string name="register_pwd">Register Password</string>
    <string name="device_id">Device ID</string>
    <string name="device_hint">Please enter the device ID</string>
    <string name="machine">Machine code</string>
    <string name="commit">Commit</string>
    <string name="commiting">Data is being submitted, please wait</string>
    <string name="register_success">Registration successful</string>
    <string name="register_failed">Registration failed. Please try again</string>
    <string name="home">Home</string>
    <string name="more">More</string>
    <string name="inspection_management">Inspection Management</string>
    <string name="device_registration">Device Registration</string>
    <string name="data_upload">Data Upload\n</string>
    <string name="inquiry">Inquiry</string>
    <string name="no_data">No inspection data available</string>
    <string name="stop_inspecting">Stop Inspecting</string>
    <string name="start_inspecting">Start Inspecting</string>
    <string name="search">Search</string>
    <string name="no_upload">No upload</string>
    <string name="read_failed">Failed to read EPC status, please restart!</string>
    <string name="status">Statue of Termites</string>
    <string name="check_id">Monitoring Device Number</string>
    <string name="number">Serial Number</string>
    <string name="check_number">Monitoring Device Number</string>
    <string name="read_failed_no">Failed to read EPC status</string>
    <string name="camera">Camera</string>
    <string name="calendar">Calendar</string>
    <string name="calculator">Calculator</string>
    <string name="flashlight">Flashlight</string>
    <string name="clock">Alarm Clock</string>
    <string name="album">Photo</string>
    <string name="auxiliary">Assessibility</string>
    <string name="close_account">Your account is being closed. Please hold on</string>
    <string name="close">Close Account</string>
    <string name="start_search">Start searching</string>
    <string name="stop_seacrch">Stop searching</string>
    <string name="close_search">Close</string>
    <string name="check_id_no_null">The monitoring device number cannot be empty</string>
    <string name="data_registration">Data Registration</string>
    <string name="data_inspection">Data of Inspection</string>
    <string name="view_map">View the Map</string>
    <string name="data_upload2">Upload Data</string>
    <string name="no_upload_data">No un-uploaded Data of Registration Temporarily</string>
    <string name="no_upload_xunjian">No un-uploaded inspection data</string>
    <string name="edit">Edit</string>
    <string name="check_all">Select All</string>
    <string name="deselect_all">Unselect All</string>
    <string name="selected">Selected</string>
    <string name="delete">Delete</string>
    <string name="deleteing">Delete data, please wait</string>
    <string name="cancel">Cancel</string>
    <string name="sure">Confirm</string>
    <string name="sure_delete">Are you sure to delete this data?</string>
    <string name="select_upload">Please select the data to be uploaded</string>
    <string name="select_map">Select the data for which you want to view the map</string>
    <string name="uploading">Data uploaded, please wait</string>
    <string name="upload_success">Registration data uploaded successfully</string>
    <string name="upload_feild">Registration data upload failed</string>
    <string name="deling">Delete data, please wait</string>
    <string name="del_success">Data deletion successful</string>
    <string name="uploaded">Uploaded</string>
    <string name="xunjian_success">Data of Inspection uploaded successfully</string>
    <string name="xunjian_failed">Data of Inspection uploaded failed</string>
    <string name="area_code">Area Code</string>
    <string name="project_number">Project Number</string>
    <string name="project_hint">Please enter</string>
    <string name="monitor_id">Monitoring Point Number</string>
    <string name="monitor_hint">Please enter</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="registration">Registration</string>
    <string name="data_validation">Data Validation</string>
    <string name="download_map">Download Offline Map</string>
    <string name="no_area_id">The area code was not synchronized</string>
    <string name="down_maping">Please wait while the offline map package is downloaded</string>
    <string name="down_map_success">Offline map download complete</string>
    <string name="down_new_map">The offline map package version has been updated. Do you want to download the new offline map package?</string>
    <string name="locate_failed">Location failed, please check whether the network or GPS is on</string>
    <string name="locate">Current Location:</string>
    <string name="error1">Please synchronize the data in the login interface</string>
    <string name="error2">Please enter the project number</string>
    <string name="error3">The item number format is not correct</string>
    <string name="error4">Please enter the station number</string>
    <string name="error5">The format of the station number is not correct</string>
    <string name="error6">Please open the map for location</string>
    <string name="error7">The item number cannot exceed four digits</string>
    <string name="error8">The station number must not exceed three digits</string>
    <string name="checking_data">Data is being detected, please hold on</string>
    <string name="check_data">Checking data, please wait</string>
    <string name="please_login">Please register first</string>
    <string name="if_download">Do you want to download offline data package?</string>
    <string name="cannt_download">The current location failed to download the offline map</string>
    <string name="download">The offline map package for the current province has been downloaded</string>
    <string name="error_dialog1">Current station number:</string>
    <string name="error_dialog2">Statue of Termites:</string>
    <string name="error_dialog3">Check failed, please try again!</string>
    <string name="error_dialog4">Same as the monitoring station number in the device, please re-enter</string>
    <string name="error_dialog5">The monitoring point in the current device is numbered:</string>
    <string name="error_dialog6">Whether the station number needs to be re-registered?</string>
    <string name="error_dialog7">Registering device data, please wait</string>
    <string name="error_dialog8">Registration failed. Please register again！</string>
    <string name="error_dialog9">Write failed. Try writing again near the label</string>
    <string name="error_dialog10">Failed to register the station number</string>
    <string name="error_dialog11">Write failed. Try writing again near the label</string>
    <string name="dengji_success">Data registration successful</string>
    <string name="registration_history">Registration history</string>
    <string name="inspection_history">Inspection history</string>
    <string name="get_data">Get data in, please wait</string>
    <string name="change_data">Data modified, please wait</string>
    <string name="version">Current version：</string>
    <string name="map">Map</string>
    <string name="have">Yes</string>
    <string name="check_id2">Monitoring Point Number:</string>
    <string name="unregistered">Unregistered</string>
    <string name="no_have">No</string>
    <string name="voice_error">Audio file playback abnormal</string>
    <string name="voice_error2">Audio file playback abnormal</string>
    <string name="camera_error1">Sorry, your camera function is not available</string>
    <string name="camera_error2">Please check if you are authorized to apply camera permissions</string>
    <string name="camera_error3">Sorry, your camera function is not available</string>
    <string name="camera_error4">System calendar failed to open</string>
    <string name="camera_error5">System calculator failed to open</string>
    <string name="camera_error6">System alarm failed to open</string>
    <string name="camera_error7">System album failed to open</string>
    <string name="checkin_adapter1">Monitoring Point Number:</string>
    <string name="checkin_adapter2">Project Number:</string>
    <string name="checkin_adapter3">Registration time:</string>
    <string name="checkin_adapter4">Longitude:</string>
    <string name="checkin_adapter5">Latitude:</string>
    <string name="ins_adapter1">Monitoring Device Number:</string>
    <string name="ins_adapter2">Statue of Termites:</string>
    <string name="ins_adapter3">Inspection time:</string>
    <string name="ins_adapter4">Upload status:</string>
    <string name="no_history1">No record of registration</string>
    <string name="no_history2">No inspection history record</string>
</resources>
